Added navbar, welcome page, three column section

--- a/Bootstrap 4 Site Files/index.html
+++ b/Bootstrap 4 Site Files/index.html
@@ -8,8 +8,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/v4-shims.css">	
 	<link href="style.css" rel="stylesheet">
+	
 </head>
 <body>
 
@@ -17,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<!-- Brand -->
-	<a class ="navbar-brand" href = "#"><img src="img/logo.png"> Smart Campus Mobility System</a>
+	<a class ="navbar-brand" href = "#"><img src="img/bike1.png" style width = 20% height = 20%> Smart Campus Mobility System</a>
   
 	<!-- Toggler/collapsibe Button -->
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -26,8 +28,8 @@
   
 	<!-- Navbar links -->
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-	  <ul class="nav justify-content-end">
-		<li class="nav-item active">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
 		  <a class="nav-item nav-link" href="#">Home</a>
 		</li>
 		<li class="nav-item">
@@ -106,6 +108,27 @@
 
 
 <!--- Three Column Section -->
+
+<div class = "container-fluid padding">
+	<div class = "row text-center padding">
+		<div class = "col-xs-12 col-sm-6 col-md-4">
+			<i class = "fas fa-tasks"></i>
+			<h3>Manage</h3>
+			<p> Add a bike, register a bike </p>
+		</div>
+		<div class = "col-xs-12 col-sm-6 col-md-4">
+			<i class="fas fa-ruler"></i>
+			<h3>Plan</h3>
+			<p> Plan for more resources </p>
+		</div>
+		<div class = "col-sm-12 col-md-4">
+			<i class="fas fa-chart-line"></i>	
+							<h3>Track</h3>
+			<p> View analytics </p>
+		</div>
+	</div>
+	<hr class = "my-4">
+</div>
 
 
 <!--- Two Column Section -->
