--- a/Bootstrap 4 Site Files/index.html
+++ b/Bootstrap 4 Site Files/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/v4-shims.css">	
 	<link href="style.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='custom.css' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
@@ -100,7 +102,7 @@
 		<hr> <!-- an underline -->
 		<div class = "col-12">
 			<p class = "lead">
-				Welcome to the Administration Portal of Smart Campus Mobility System. Here, you can manage, plan, and track your electric bike sharing system. Enjoy!
+				Welcome to the Administration Portal of Smart Campus Mobility System. Here, you can manage, plan, and monitor your electric bike sharing system. Enjoy!
 			</p>
 		</div>
 	</div>
@@ -114,21 +116,218 @@
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class = "fas fa-tasks"></i>
 			<h3>Manage</h3>
-			<p> Add a bike, register a bike </p>
+			<p> Register a bike, register a slot, view bike status, view system reports, cost center </p>
 		</div>
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-ruler"></i>
 			<h3>Plan</h3>
-			<p> Plan for more resources </p>
+			<p> View acitvity heatmaps, plan bike routes </p>
 		</div>
 		<div class = "col-sm-12 col-md-4">
-			<i class="fas fa-chart-line"></i>	
-							<h3>Track</h3>
-			<p> View analytics </p>
+			<i class="fas fa-hard-hat"></i>	
+				<h3>User safety</h3>
+			<p> View user violations, view violation details, warn/ban/fine users </p>
 		</div>
 	</div>
 	<hr class = "my-4">
 </div>
+
+
+
+<!-- Manage Section-->
+<div class = "container-fluid padding"> <!-- padding between row and column-->
+	<h2>Manage</h2>
+	<div class = "container-fluid padding"> <!-- padding between row and column-->
+
+<h3>Register a new bike</h3>
+<form>
+	<div class="row">
+	  <div class="col">
+		<input type="number" class="form-control" placeholder="Bike ID">
+	  </div>
+	  <div class="col">
+		<input type="text" class="form-control" placeholder="Bike Model">
+	  </div>
+	</div>
+	<div class = "row">
+		<div class = "col">
+			<input type = "text" class = "form-control" placeholder = "Bike Color">
+		</div>
+		<div class = "col">
+			<input type = "text" class = "form-control" placeholder = "Bike Manufacturer">
+		</div>
+	</div>
+	<div class = "row">
+		<div class = "col">
+			<input type = "number" class = "form-control" placeholder = "Bike Price">
+		</div>
+		<div class = "col">
+			<input type = "date" class = "form-control" placeholder = "Data of purchase">
+		</div>
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>	
+
+</div>
+
+<hr>
+
+
+<div class = "container-fluid planning">
+<h3>Register a slot</h3>
+<form>
+	<div class="form-row">
+	  <div class="col">
+		<input type="number" class="form-control" placeholder="Slot ID">
+	  </div>
+	  
+	  <div class="col form-group" >
+		<label for="slotLocationForm"></label>
+    <select class="form-control" id="slotLocationForm" >
+      <option>ESB</option>
+      <option>CAAD</option>
+      <option>SBA</option>
+      <option>Main Building</option>
+      <option>ARTS</option>
+    </select>
+  </div>
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>
+
+</div>
+
+<hr>
+
+<div class = "container-fluid planning">
+
+<h3> View Bike Status </h3>
+
+<p>
+	<a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Bike 1</a>
+	<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Bike 2</button>
+  </p>
+  <div class="row">
+	<div class="col">
+	  <div class="collapse multi-collapse" id="multiCollapseExample1">
+		<div class="card card-body">
+		  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+		</div>
+	  </div>
+	</div>
+	<div class="col">
+	  <div class="collapse multi-collapse" id="multiCollapseExample2">
+		<div class="card card-body">
+		  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+		</div>
+	  </div>
+	</div>
+  </div>
+
+</div>
+
+<div class="row">
+	<div class="col-4">
+	  <div class="list-group" id="list-tab" role="tablist">
+		<a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Bike 1</a>
+		<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Bike 2</a>
+		<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Bike 3</a>
+		<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Bike 4</a>
+	  </div>
+	</div>
+	<div class="col-8">
+	  <div class="tab-content" id="nav-tabContent">
+		<div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+
+			<div class = "container-fluid">
+				<div class = "progress">
+			<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+				Battery Level: 10%
+		</div>
+
+<div id="googleMap" style="width:100%;height:100%;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZHONZUbW_8UHC4SRxOZ9pdFLUxPwlad8&callback=myMap"></script>
+</div>
+
+</div>
+		</div>
+		<div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+			<div class = "progress">
+				<div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+					Battery Level: 40%
+			</div>
+			<div id="map"></div>
+
+	</div>
+	
+
+		</div>
+		<div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+			<div class = "progress">
+				<div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+					Battery Level: 100%
+			</div>
+	</div>
+		</div>
+		<div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+			<div class = "progress">
+				<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					Battery Level: 50%
+			</div>
+	</div>
+		</div>
+	  </div>
+	</div>
+  </div>
+
+
+</div>
+
+
+<!-- Register a bike-->
+<!-- Register a slot-->
+<!-- View bike status-->
+<!-- View system reports-->
+<!-- Cost center-->
+
+
+<!-- Plan section-->
+<!-- View activity heatmaps-->
+<!-- Plan Bike routes-->
+
+
+<!-- User safety section-->
+<!-- View user violations-->
+<!-- View violation details-->
+<!-- Warn ban fine users-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!--- Two Column Section -->
@@ -156,6 +355,10 @@
 
 
 
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZHONZUbW_8UHC4SRxOZ9pdFLUxPwlad8"></script>
+<script src="custom.js"></script>
 
 </body>
 </html>
