--- a/Bootstrap 4 Site Files/index.html
+++ b/Bootstrap 4 Site Files/index.html
@@ -13,13 +13,18 @@
 	<link href="style.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='custom.css' rel='stylesheet' type='text/css'>
-	
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+	<script type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKPdAyvhgUmtLcg6a13XWLrf5FEaf8n74&libraries=visualization">
+</script>
 </head>
 <body>
 
+
+	<!-- AIzaSyCKPdAyvhgUmtLcg6a13XWLrf5FEaf8n74 -->
 <!-- Navigation -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light -">
 	<!-- Brand -->
 	<a class ="navbar-brand" href = "#"><img src="img/bike1.png" style width = 20% height = 20%> Smart Campus Mobility System</a>
   
@@ -58,7 +63,7 @@
 <!--- Image Slider -->
 
 	<!-- sliders for the carousel -->
-
+<!-- 
 <div id = "slides" class = "carousel slide" data-ride = "carousel">
 	<ul class = "carousel-indicators">
 		<li data-target = "#slides" data-side-to ="0" class = "active"></li>
@@ -86,7 +91,7 @@
 	</div>
 </div>
 </div>
-
+ -->
 
 
 
@@ -205,30 +210,45 @@
 
 <h3> View Bike Status </h3>
 
-<p>
+ <p>
 	<a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Bike 1</a>
 	<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Bike 2</button>
   </p>
   <div class="row">
 	<div class="col">
-	  <div class="collapse multi-collapse" id="multiCollapseExample1">
-		<div class="card card-body">
-		  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+		<div class="collapse multi-collapse" id="multiCollapseExample1">
+		  <div class="card card-body">
+
+			<div class = "progress" >
+				<div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+					Battery Level: 100%
+			</div>
+			</div>
+
+			<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKaD3-4n19T4RkB-VBIddIjQ&key=AIzaSyCKPdAyvhgUmtLcg6a13XWLrf5FEaf8n74" allowfullscreen></iframe>
+  
+		  </div>
 		</div>
 	  </div>
-	</div>
+
+
 	<div class="col">
 	  <div class="collapse multi-collapse" id="multiCollapseExample2">
 		<div class="card card-body">
-		  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+			<div class = "progress">
+				<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					Battery Level: 50%
+			</div>
+			</div>		  <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKaD3-4n19T4RkB-VBIddIjQ&key=AIzaSyCKPdAyvhgUmtLcg6a13XWLrf5FEaf8n74" allowfullscreen></iframe>
+
 		</div>
 	  </div>
 	</div>
   </div>
 
-</div>
+</div> 
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-4">
 	  <div class="list-group" id="list-tab" role="tablist">
 		<a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Bike 1</a>
@@ -246,22 +266,9 @@
 			<div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
 				Battery Level: 10%
 		</div>
-
-<div id="googleMap" style="width:100%;height:100%;"></div>
-
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZHONZUbW_8UHC4SRxOZ9pdFLUxPwlad8&callback=myMap"></script>
-</div>
-
+<div>
+		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKaD3-4n19T4RkB-VBIddIjQ&key=AIzaSyCKPdAyvhgUmtLcg6a13XWLrf5FEaf8n74" allowfullscreen></iframe>
+		</div>
 </div>
 		</div>
 		<div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
@@ -291,10 +298,188 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 		</div>
 	  </div>
 	</div>
-  </div>
+  </div> -->
 
+<hr>
+  <div class = "container-fluid planning">
+
+	<h3> View System Reports </h3>
+	<canvas id="bikeSlots" ></canvas>
+<script>
+var ctx = document.getElementById('bikeSlots').getContext('2d');
+ctx.height = 10;
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ['ESB', 'SBA', 'CAAD', 'Main Building', 'Student Center', 'LAN'],
+        datasets: [{
+            label: '# of slots',
+            data: [4, 2, 1, 3, 4, 1],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
+</script>
+
+<canvas id="bikeNumber" ></canvas>
+<script>
+var ctx = document.getElementById('bikeNumber').getContext('2d');
+ctx.height = 10;
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ['ESB', 'SBA', 'CAAD', 'Main Building', 'Student Center', 'LAN'],
+        datasets: [{
+            label: '# of bikes',
+            data: [2, 1, 4, 5, 3, 0],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
+</script>
+	
 
 </div>
+
+
+<hr>
+  <div class = "container-fluid planning">
+<h3> View Cost Center </h3>
+
+<canvas id="doughnut-chart" ></canvas>
+<script>
+
+
+new Chart(document.getElementById("doughnut-chart"), {
+    type: 'doughnut',
+    data: {
+      labels: ["Bikes Cost", "Maintainance Cost", "Spare Parts Cost", "Marketing", "Developers"],
+      datasets: [
+        {
+          label: "Dirhams (AED)",
+          backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+          data: [2000,700,500,300,1000]
+        }
+      ]
+    },
+    options: {
+      title: {
+        display: true,
+        text: 'Cost per Sector in Dirhams (AED)'
+      }
+    }
+});
+// var ctx = document.getElementById('constCenter').getContext('2d');
+// ctx.height = 10;
+
+
+
+// var myDoughnutChart = new Chart(ctx, {
+//     type: 'doughnut',
+//     data: {
+//         labels: ['ESB', 'SBA', 'CAAD', 'Main Building', 'Student Center', 'LAN'],
+//         datasets: [{
+//             label: '# of bikes',
+//             data: [2, 1, 4, 5, 3, 0],
+           
+//         }]
+//     },
+// });
+
+</script>
+
+
+	</div>
+
+
+	<div class = "container-fluid padding"> <!-- padding between row and column-->
+		<h2>Plan</h2>
+		<div class = "container-fluid padding"> <!-- padding between row and column-->
+	
+	<h3>View activity heat maps</h3>
+
+	<script>
+/* Data points defined as an array of LatLng objects */
+var heatmapData = [
+  new google.maps.LatLng(37.782, -122.447),
+  new google.maps.LatLng(37.782, -122.445),
+  new google.maps.LatLng(37.782, -122.443),
+  new google.maps.LatLng(37.782, -122.441),
+  new google.maps.LatLng(37.782, -122.439),
+  new google.maps.LatLng(37.782, -122.437),
+  new google.maps.LatLng(37.782, -122.435),
+  new google.maps.LatLng(37.785, -122.447),
+  new google.maps.LatLng(37.785, -122.445),
+  new google.maps.LatLng(37.785, -122.443),
+  new google.maps.LatLng(37.785, -122.441),
+  new google.maps.LatLng(37.785, -122.439),
+  new google.maps.LatLng(37.785, -122.437),
+  new google.maps.LatLng(37.785, -122.435)
+];
+
+var sanFrancisco = new google.maps.LatLng(37.774546, -122.433523);
+
+map = new google.maps.Map(document.getElementById('map'), {
+  center: sanFrancisco,
+  zoom: 13,
+  mapTypeId: 'satellite'
+});
+
+var heatmap = new google.maps.visualization.HeatmapLayer({
+  data: heatmapData
+});
+heatmap.setMap(map);		</script>
+	
 
 
 <!-- Register a bike-->
