Login and register done

--- a/WebUI/index.html
+++ b/WebUI/index.html
@@ -137,6 +137,27 @@
 
 
 
+<div id = "addAdmin"></div>
+<div class = "container-fluid padding"> <!-- padding between row and column-->
+	<h2>Add Admin</h2>
+	<div class = "container-fluid padding"> <!-- padding between row and column-->
+
+
+		<h3>Add a new admin</h3>
+<form>
+	<div class="row">
+	  <div class="col">
+		<input type="email" class="form-control" placeholder="Admin Email Address">
+	  </div>
+	 
+	<button type="submit" class="btn btn-primary">Submit</button>
+
+  </form>	
+
+</div>
+</div>
+</div>
+
 <!-- Manage Section-->
 <div id = "manage"></div>
 <div class = "container-fluid padding"> <!-- padding between row and column-->
